edit project struct

--- a/LinkShort/Pages/Index.cshtml
+++ b/LinkShort/Pages/Index.cshtml
@@ -37,5 +37,5 @@
 }
 else
 {
-    <h3>Вы ещё не добавили ни одной ссылки!<br />Нажмите на кнопку "Добавить ссылку"</h3>
+    <h3>Вы ещё не добавили ни одной ссылки!<br />Нажмите на кнопку "Сократить ссылку"</h3>
 }
